--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Congcong Liu (刘聪聪)"
+title                    : "Congcong Liu"
 description              : "Congcong Liu's CV. "
 repository               : "sober235/sober235.github.io"
 google_scholar_stats_use_cdn : true
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Congcong Liu"
+  name             : "Congcong Liu (刘聪聪)"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "University of Chinese Academy of Sciences"
   location         : "Beijing, China"
