--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Congcong Liu (刘聪聪)"
+  name             : "Congcong Liu \n (刘聪聪)"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "University of Chinese Academy of Sciences"
   location         : "Beijing, China"
