--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Congcong Liu"
-description              : "Congcong Liu's CV. "
+description              : "Focus on foundation models coupled with MRI physics"
 repository               : "sober235/sober235.github.io"
 google_scholar_stats_use_cdn : true
 
