--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Congcong Liu \n (刘聪聪)"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "University of Chinese Academy of Sciences"
-  location         : "Beijing, China"
+  location         : "Shenzhen, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=jGnxZdsAAAAJ&hl=zh-CN"
