--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Congcong Liu \n (刘聪聪)"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "University of Chinese Academy of Sciences"
+  bio              : "Shenzhen Institutes of Advanced Technology, Chinese Academy of Sciences"
   location         : "Shenzhen, China"
   employer         :
   pubmed           : 
