--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,9 @@ main:
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
+  - title: "Service"
+    url: "/#-service"
+
   - title: "Educations"
     url: "/#-educations"
 
